<resources>
    <string name="app_name">WhatsMode</string>
    <string name="tabFirst">MODE</string>
    <string name="tabSecond">INFLUENCER</string>
    <string name="tabThird">MY CART</string>
    <string name="tabFourth">ACCOUNT</string>
    <string name="search">search</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="save">save</string>
    <string name="no_more">no more</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_a_valid_email">Please enter a valid Email !</string>
    <string name="please_enter_the_email">Please enter the email</string>
    <string name="please_input_a_password">Please input a password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create">Create</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="we_well_send_you_an_email_to_reset_your_password">We well send you an email to reset your password.</string>
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>
    <string name="all">ALL</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Would like deleting cart items?</string>
    <string name="total_cost">" : %1$s"</string>
    <string name="delete">DELETE</string>
    <string name="no_clear_error">the server is busying, please try later</string>
    <string name="plz_select_products">please select pruducts</string>
    <string name="custom_know">Billing address-Use a different billing address</string>
    <string name="new_arrive">NEW</string>
    <string name="new_arrive_suffix">ARRIVALS</string>
    <string name="discover_tv">DISCOVER</string>
    <string name="sale">SALE</string>
    <string name="aboutUs">About US</string>
    <string name="sent_check_your_email">Sent! Check Your Email</string>
    <string name="change_password">Change Password</string>
    <string name="clear_cache">Remove Cache</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_input_new_password">Please input new password</string>
    <string name="apply">APPLY</string>
    <string name="gift_card">ADD COUPON</string>
    <string name="plz_fill_card_num">PLEASE INPUT CARD NUM</string>
    <string name="already_have_a_whatsmode">Already have a Whatsmode?</string>
    <string name="log_in">Log In</string>
    <string name="sent">Sent</string>
    <string name="sent_">Sent!</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="press_again_exist">Press again to exit</string>
    <string name="checkout">CHECKOUT</string>
    <string name="amount_all">Subtotal:</string>
    <string name="unit">$</string>
    <string name="address">Address</string>
    <string name="product">Product</string>
    <string name="price_information">Price Information</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_standard_shipping">Shipping(Standard Shipping)</string>
    <string name="taxes">Taxes</string>
    <string name="coupon">Coupon</string>
    <string name="total">Total</string>
    <string name="total_price">Total:</string>
    <string name="order_">Order#</string>
    <string name="dollar_sign">$</string>
    <string name="sku_">SKU:</string>
    <string name="order_details">Order Details</string>
    <string name="share">SHARE</string>
    <string name="pay">PAY</string>
    <string name="total_text">Subtotal</string>
    <string name="add_address">add shipping address</string>
    <string name="shipping_cost">Shipping(Standard Shipping)</string>
    <string name="gift_card_hint">Gift card or Coupon code：</string>
    <string name="no_shipping_currently">No AvailableShippingRates now</string>
    <string name="settings">Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="save_">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_the_current_password">Please enter the current password</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="current_password_input_is_mistaken">Current password input is mistaken</string>
    <string name="usd">USD</string>
    <string name="default_address">Default Address</string>
    <string name="set_as_default">Set as Default</string>
    <string name="add_a_new_address">+ Add A New Address</string>
    <string name="new_address">New address</string>
    <string name="apt_suite_etc">Apt,suite,etc</string>
    <string name="optional">optional</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="please_select">Please select</string>
    <string name="province">State</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Phone</string>
    <string name="id_cant_be_empty">ID can\'t be empty</string>
    <string name="first_name_empty_prompt">Please enter the First Name</string>
    <string name="last_name_empty_prompt">Please enter the Last Name</string>
    <string name="address1_empty_prompt">Please enter the Address</string>
    <string name="city_empty_prompt">Please enter the City</string>
    <string name="country_empty_prompt">Please choose the Country</string>
    <string name="state_empty_prompt">Please choose the State</string>
    <string name="zip_empty_prompt">Please enter the Zip Code</string>
    <string name="phone_empty_prompt">Please enter the Phone</string>
    <string name="address_list_empty_prompt">You do not have any addresses.\n To shop Fresh,you will need to\n add new address.</string>
    <string name="add_address_for_empty">+ Add Addresses</string>
    <string name="update_address">Update address</string>
    <string name="update_address_success">Update address success</string>
    <string name="add_address_success">Add address success</string>
    <string name="plz_select_address">please select your address</string>
    <string name="cart_empty_now">Your cart is currently empty！</string>
    <string name="my_orders">My Orders</string>
    <string name="order_empty_prompt">You haven\'t placed\n any orders yet.</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="card_num_not_exist">card num is invalid</string>
    <string name="dedicated_platform_for_influencer_brands">A Dedicated Platform\n for Influencer Brands</string>
    <string name="my_address">My Address</string>
    <string name="whether_pay_continue">Do you want to pay continue?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="under_review">Under review</string>
    <string name="desc_order_check">We are reviewing the transaction</string>
    <string name="Repayment">Repayment</string>
    <string name="complete">Complete</string>
    <string name="success">Success</string>
    <string name="success_desc">Your bill has been paid</string>
    <string name="home">Home</string>
    <string name="view_order">View Order</string>
    <string name="yes_">Yes</string>
    <string name="no_">No</string>
    <string name="prompt">Prompt</string>
    <string name="confirm_exit">Would you like logging out?</string>
    <string name="confirm_the_scavenging_cache">Would you like clearing cache?</string>
    <string name="confirm_deletion">Would you like deleting address?</string>
    <string name="snapchat">Snapchat</string>
    <string name="share_">Share</string>
    <string name="url">Url</string>
    <string name="sign_in_">Sign In</string>
    <string name="submit">Submit</string>
    <string name="url_copy_success">URL replication success</string>
    <string name="replace_unidentified_customer">email or password is error,please check.</string>
    <string name="notification_error_ssl_cert_invalid">notification error ssl cert invalid</string>

    <array name="category">
        <item>APPAREL</item>
        <item>ACCESSORIES</item>
        <item>BAGS</item>
        <item>SHOES</item>
    </array>

    <array name="subCategory_APPAREL">
        <item>Tops</item>
        <item>Dresses</item>
        <item>Activewear</item>
        <item>Coats &amp; Jackets</item>
        <item>Plus Sizes</item>
        <item>Pants &amp; Shorts</item>
        <item>Hoodies</item>
        <item>Sweaters &amp; Cardigans</item>
        <item>Lingerie &amp; Sleepwear</item>
        <item>Swimwear &amp; Beachwear</item>
        <item>Jumpsuits &amp; Playsuits</item>
        <item>Socks &amp; Tights</item>
        <item>Skirts</item>
    </array>

    <array name="pop_icon_name">
        <item>News</item>
        <item>Discover</item>
        <item>Sale</item>
    </array>

    <array name="pop_icon_link">
        <item>https://whatsmode.com/collections/new-arrival</item>
        <item>https://whatsmode.com/pages/discover-new</item>
        <item>https://whatsmode.com/collections/sale</item>
    </array>
    <array name="subCategory_APPAREL_LINK">
        <item>/collections/tops-1</item>
        <item>/collections/dresses</item>
        <item>/collections/activewear</item>
        <item>/collections/coats-jackets</item>
        <item>/collections/plus-sizes</item>
        <item>/collections/pants-shorts</item>
        <item>/collections/hoodies</item>
        <item>/collections/sweaters-cardigans</item>
        <item>/collections/lingerie-sleepwear</item>
        <item>/collections/swimwear-beachwear</item>
        <item>/collections/jumpsuits-playsuits</item>
        <item>/collections/socks-tights</item>
        <item>/collections/skirts</item>
    </array>

    <array name="subCategory_ACCESSORIES">
        <item>Jewelry</item>
        <item>Hats</item>
        <item>Hair Accessories</item>
        <item>Scarves</item>
        <item>Sunglasses</item>
        <item>Beauty</item>
        <item>Stationery &amp; Organization</item>
    </array>

    <array name="subCategory_ACCESSORIES_LINK">
        <item>/collections/jewelry</item>
        <item>/collections/hats</item>
        <item>/collections/hair-accessories</item>
        <item>/collections/scarves</item>
        <item>/collections/sunglasses</item>
        <item>/collections/beauty</item>
        <item>/collections/stationery-organization</item>
    </array>

    <array name="subCategory_BAGS">
        <item>Backpacks</item>
        <item>Tote Bags</item>
        <item>Cross Body Bags</item>
        <item>Shoulder Bags</item>
    </array>

    <array name="subCategory_BAGS_LINK">
        <item>/collections/backpacks</item>
        <item>/collections/tote-bags</item>
        <item>/collections/cross-body-bags</item>
        <item>/collections/shoulder-bags</item>
    </array>

    <array name="subCategory_SHOES">
        <item>Sneakers</item>
        <item>Pumps</item>
        <item>Boots</item>
        <item>Flats</item>
    </array>

    <array name="subCategory_SHOES_LINK">
        <item>/collections/sneakers</item>
        <item>/collections/pumps</item>
        <item>/collections/boots</item>
        <item>/collections/shoes</item>
    </array>
</resources>
