<?xml version="1.0" encoding="utf-8"?>
<com.whatsmode.shopify.ui.widget.BottomBar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <com.whatsmode.shopify.ui.widget.BottomBarItem
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:bbi_iconNormal="@mipmap/ic_launcher"
        app:bbi_iconSelected="@mipmap/ic_launcher"
        app:bbi_text="@string/tabFirst"
        app:bbi_textColorNormal="@color/tab_normal"
        app:bbi_textColorSelected="@color/colorPrimary" />

    <com.whatsmode.shopify.ui.widget.BottomBarItem
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:bbi_iconNormal="@mipmap/ic_launcher"
        app:bbi_iconSelected="@mipmap/ic_launcher"
        app:bbi_text="@string/tabSecond"
        app:bbi_textColorNormal="@color/tab_normal"
        app:bbi_textColorSelected="@color/colorPrimary" />

    <com.whatsmode.shopify.ui.widget.BottomBarItem
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:bbi_iconNormal="@mipmap/ic_launcher"
        app:bbi_iconSelected="@mipmap/ic_launcher"
        app:bbi_text="@string/tabThird"
        app:bbi_textColorNormal="@color/tab_normal"
        app:bbi_textColorSelected="@color/colorPrimary" />

    <com.whatsmode.shopify.ui.widget.BottomBarItem
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:bbi_iconNormal="@mipmap/ic_launcher"
        app:bbi_iconSelected="@mipmap/ic_launcher"
        app:bbi_text="@string/tabFourth"
        app:bbi_textColorNormal="@color/tab_normal"
        app:bbi_textColorSelected="@color/colorPrimary" />
</com.whatsmode.shopify.ui.widget.BottomBar>
