<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_toolbar_main" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/checkout_not_payed"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/unpay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/icon_unpay" />

        <TextView
            android:id="@+id/under_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_below="@id/unpay_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/under_review"
            android:textColor="@color/gray_333333"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/under_review"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/desc_order_check"
            android:textColor="@color/gray_333333"
            android:textSize="14sp" />

        <Button
            android:id="@+id/repay"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_btn_pre"
            android:text="@string/Repayment"
            android:textAllCaps="false"
            android:textColor="@color/gray_333333"
            android:textSize="14sp" />

        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_above="@+id/repay"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_round_dark"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/checkout_payed"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/icon_finish"
            android:id="@+id/success_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/success_icon"
            android:textSize="18sp"
            android:textColor="@color/gray_333333"
            android:text="@string/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status_desc"
            android:layout_below="@+id/status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/gray_333333"
            android:text="@string/success_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/order_price"
            android:layout_below="@+id/status_desc"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/gray_333333"
            android:text="$88.88"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/icon_ticket"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/view_order"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_btn_pre"
            android:text="@string/view_order"
            android:textAllCaps="false"
            android:textColor="@color/gray_333333"
            android:textSize="14sp" />

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_above="@+id/view_order"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_round_dark"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>
</LinearLayout>