<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="48dp">
    <ImageView
        android:id="@+id/checkOut_select"
        android:background="@drawable/cart_select"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/all"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/checkOut_select"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/checkOut"
        android:background="@color/gray_333333"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_width="120dp"
        android:text="@string/checkout"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/total_count"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/checkOut"
        android:layout_marginRight="13dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="$0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/total"
        android:layout_toLeftOf="@+id/total_count"
        android:layout_marginRight="13dp"
        android:layout_centerVertical="true"
        android:textColor="@color/gray_bbb"
        android:layout_marginLeft="80dp"
        android:text="@string/amount_all"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/delete"
        android:visibility="gone"
        android:background="@color/gray_333333"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_width="120dp"
        android:text="@string/delete"
        android:layout_height="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/total_count"
        android:text="USD"
        android:textSize="10sp" />
</RelativeLayout>