<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/btn_return"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp" >

        <TextView
            android:id="@+id/title"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/save"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/save_"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:background="@color/separator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/current_password"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/gray_bbbbbb"
            android:hint="@string/current_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <View
            android:background="@color/separator"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="2px"/>

        <EditText
            android:id="@+id/new_password"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/gray_bbbbbb"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>
    </FrameLayout>



</LinearLayout>