<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/first_name"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/first_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2px"/>

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/last_name"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/last_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2px"/>

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/email"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="18dp"
            android:enabled="false"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/gray_d5d5d5"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <TextView
        android:id="@+id/change_password"
        android:text="@string/change_password"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/black"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
    android:background="@color/gray_d5d5d5"
    android:layout_width="match_parent"
    android:layout_height="8dp"/>

    <TextView
        android:id="@+id/clear_cache"
        android:text="@string/clear_cache"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="@dimen/sp_14"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/gray_d5d5d5"
        android:layout_width="match_parent"
        android:layout_height="18dp"/>

    <TextView
        android:id="@+id/sign_out"
        android:text="@string/sign_out"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/gray_d5d5d5"
        android:layout_width="match_parent"
        android:layout_height="18dp"/>

</LinearLayout>